protecting against CSRF

--- a/views/partials/signature_form.handlebars
+++ b/views/partials/signature_form.handlebars
@@ -3,7 +3,7 @@
     <input type="text" name="last_name" placeholder="Last Name" required>
     <input type="text" name="email" placeholder="Email Address" required>
     <input type="hidden" name="signature" required>
-    <!-- <input type="hidden" name="_csrf" value={{csrfToken}}> -->
+    <input type="hidden" name="_csrf" value={{csrfToken}}>
     <div id="signature-container"></div>
     <button type="submit" name="submit">Send</button>
 </form>
